--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <p>A Full Stack Engineering Manager helping founders build and scale secure, cloud-native apps on GCP.</p>
         <ul class="actions">
           <li><a href="#services" class="button scrolly">View Services</a></li>
-          <li><a href="#contact" class="button primary hire-me">Hire Me – Let’s Build Together</a></li>
+          <li><a href="#contact" class="button primary hire-me">Hire Me</a></li>
         </ul>
       </div>
     </section>
@@ -181,5 +181,20 @@
 </section>
 
   </div>
+  <!-- Footer -->
+		<footer id="footer" class="wrapper style1-alt">
+			<div class="inner">
+				<p>&copy; 2025 Thakur. All rights reserved.</p>
+			</div>
+		</footer>
+
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 </body>
 </html>
