--- a/index.html
+++ b/index.html
@@ -140,23 +140,52 @@
       </div>
     </section>
 
-    <!-- Blog -->
-    <section id="blog" class="wrapper style2 fade-up">
-      <div class="inner">
-        <h2>From the Blog</h2>
-        <p>Insights to help you grow and navigate career uncertainty.</p>
-        <div class="blog-posts">
-          <article>
-            <h3>3 Mindset Shifts for Job Security Anxiety</h3>
-            <p>Learn how to ground yourself when your career feels out of control.</p>
-          </article>
-          <article>
-            <h3>How to Rebuild Confidence After a Layoff</h3>
-            <p>Practical tools for moving forward.</p>
-          </article>
-        </div>
-      </div>
-    </section>
+   
+           <!-- Blog -->
+<section id="blog" class="wrapper style2 fade-up">
+  <div class="inner">
+    <h2>Kickstart Your GCP Projects: The Ultimate Starter Checklist & Guide</h2>
+    <p>A step-by-step roadmap to launching and scaling cloud-native applications on Google Cloud.</p>
+    <div class="blog-posts">
+      <article>
+        <h3>Introduction: Why GCP?</h3>
+        <p>Discover the benefits of Google Cloud for startups and developers, including scalability, security, and cost efficiency.</p>
+      </article>
+      <article>
+        <h3>Step 1: Set Up Your Google Cloud Account & Billing</h3>
+        <p>Register, activate billing, and explore the GCP dashboard.</p>
+      </article>
+      <article>
+        <h3>Step 2: Install & Configure Google Cloud SDK</h3>
+        <p>Get started with command-line tools for managing your cloud infrastructure.</p>
+      </article>
+      <article>
+        <h3>Step 3: Create a Basic React + Node.js Project</h3>
+        <p>Build a foundation with full-stack technologies that integrate seamlessly with GCP.</p>
+      </article>
+      <article>
+        <h3>Step 4: Containerize Your App with Docker</h3>
+        <p>Use Docker to package and deploy applications efficiently.</p>
+      </article>
+      <article>
+        <h3>Step 5: Deploy on Cloud Run or App Engine</h3>
+        <p>Choose between serverless solutions for automatic scaling and ease of management.</p>
+      </article>
+      <article>
+        <h3>Step 6: Set Up CI/CD with GitHub Actions</h3>
+        <p>Automate deployments and version control with modern DevOps practices.</p>
+      </article>
+      <article>
+        <h3>Step 7: Connect a Cloud SQL or Firestore Database</h3>
+        <p>Integrate structured or NoSQL databases with your application architecture.</p>
+      </article>
+      <article>
+        <h3>Bonus Tips: Cost Optimization & Security Best Practices</h3>
+        <p>Manage budgets efficiently and enhance security with IAM roles and policies.</p>
+      </article>
+    </div>
+  </div>
+</section>
 
   <!-- Contact -->
 <section id="contact" class="wrapper style3 fade-up">
